--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.coalcube.bansystem</groupId>
-    <artifactId>BanSystem</artifactId>
-    <version>3.2</version>
+    <artifactId>FutureBans</artifactId>
+    <version>3.2.0</version>
 
     <repositories>
         <repository>
